trunk/Archive2/18/f450c1ef86008c/output
main.cpp:8:5: error: constructor for 'Derived' must explicitly initialize the base class 'Base' which does not have a default constructor
    Derived(int a)
    ^
main.cpp:1:7: note: 'Base' declared here
class Base {
      ^
main.cpp:8:17: warning: unused parameter 'a' [-Wunused-parameter]
    Derived(int a)
                ^
1 warning and 1 error generated.
